--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "sh build.sh"
   },
@@ -21,15 +22,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "nodemon": "^3.1.9",
     "prisma": "^6.1.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "nodemon": "^3.1.9",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
   },
