--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^6.1.0",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2"
